# CAMELTrack

./: README.md  pyproject.toml  run_tracking.py  track_video.py  visualize_results.py
.github/workflows/: test-cameltrack.yaml
cameltrack/: __init__.py  camel.py  cameltrack.py
cameltrack/architecture/: __init__.py  base_module.py  det_tokenizers.py  gaffe.py  identity.py  temporal_encoder.py  temporal_heuristics.py
cameltrack/configs/: cameltrack.yaml  cameltrack_train.yaml
cameltrack/configs/dataset/: custom_video.yaml  example_video.yaml  soccer_match.yaml  video.yaml
cameltrack/configs/modules/track/: camel.yaml  camel_dancetrack.yaml  camel_posetrack21.yaml  camel_sportsmot.yaml  new_camel.yaml
cameltrack/configs/visualization/: null.yaml
cameltrack/train/: __init__.py  dataset.py  sampler.py
cameltrack/train/callbacks/: __init__.py  metrics.py  visualization.py
cameltrack/train/transforms/: __init__.py  batch.py  dataset.py  tracklet.py  transform.py
cameltrack/utils/: __init__.py  assignment_strats.py  cameltrack_launcher.py  config_finder.py  coordinates.py  distances.py  kalman_filter.py  similarity_metrics.py
