[tool.poetry]
name = "CamelTrack"
version = "1.0"
description = "Official implementation of CAMELTrack: Context-Aware Multi-cue ExpLoitation for Online Multi-Object Tracking."
authors = ["Victor Joos <victor.joos@uclouvain.be>", "Baptiste Standaert <baptiste.standaert@uclouvain.be>", "Vladimir Somers <vladimir.somers@uclouvain.be>"]
readme = "README.md"
packages = [{include = "cameltrack"}]

[tool.poetry.dependencies]
python = "^3.9"
lightning = "^2.0"
pytorch_lightning = "^2.0"
numpy = "^1.23.5"
torch = "1.13.1"
torchvision = "0.14.1"
lap = {git = "https://github.com/TrackingLaboratory/lap"}
timm = "^0.9.12"
sn-trackeval = ">=0.3.0" # {git = "https://github.com/SoccerNet/sn-trackeval.git"}
pandas = "^2.1.0"
matplotlib = "<3.9.0"
albumentations = "1.3.1"
scipy = ">=1.12.0"
torchmetrics = ">=1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins.tracklab_plugin]
cameltrack = "cameltrack.utils.config_finder:ConfigFinder"
